fix: Relabel unit price settings for more clarity

--- a/erpnext/buying/doctype/buying_settings/buying_settings.json
+++ b/erpnext/buying/doctype/buying_settings/buying_settings.json
@@ -213,21 +213,24 @@
   },
   {
    "default": "0",
+   "description": "Allows items in the Purchase Order to have a quantity of 0. Useful when the rate/unit price is agreed upon, but the quantity is not yet determined.",
    "fieldname": "allow_zero_qty_in_purchase_order",
    "fieldtype": "Check",
-   "label": "Allow 0 Qty in Purchase Order (Unit Price Items)"
+   "label": "Allow Zero Quantity Items in Purchase Order"
   },
   {
    "default": "0",
+   "description": "Allows items in the Request for Quotation to have a quantity of 0. Useful when the rate/unit price is agreed upon, but the quantity is not yet determined.",
    "fieldname": "allow_zero_qty_in_request_for_quotation",
    "fieldtype": "Check",
-   "label": "Allow 0 Qty in Request for Quotation (Unit Price Items)"
+   "label": "Allow Zero Quantity Items in Request for Quotation"
   },
   {
    "default": "0",
+   "description": "Allows items in the Supplier Quotation to have a quantity of 0. Useful when the rate/unit price is agreed upon, but the quantity is not yet determined.",
    "fieldname": "allow_zero_qty_in_supplier_quotation",
    "fieldtype": "Check",
-   "label": "Allow 0 Qty in Supplier Quotation (Unit Price Items)"
+   "label": "Allow Zero Quantity Items in Supplier Quotation"
   }
  ],
  "grid_page_length": 50,
@@ -236,7 +239,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-03-03 17:32:25.939482",
+ "modified": "2025-05-06 12:32:00.195378",
  "modified_by": "Administrator",
  "module": "Buying",
  "name": "Buying Settings",
