--- a/erpnext/buying/doctype/buying_settings/buying_settings.json
+++ b/erpnext/buying/doctype/buying_settings/buying_settings.json
@@ -213,24 +213,24 @@
   },
   {
    "default": "0",
-   "description": "Allows items in the Purchase Order to have a quantity of 0. Useful when the rate/unit price is agreed upon, but the quantity is not yet determined.",
+   "description": "Allows users to submit Purchase Orders with zero quantity. Useful when rates are fixed but the quantities are not. Eg. Rate Contracts.",
    "fieldname": "allow_zero_qty_in_purchase_order",
    "fieldtype": "Check",
-   "label": "Allow Zero Quantity Items in Purchase Order"
+   "label": "Allow Purchase Order with Zero Quantity"
   },
   {
    "default": "0",
-   "description": "Allows items in the Request for Quotation to have a quantity of 0. Useful when the rate/unit price is agreed upon, but the quantity is not yet determined.",
+   "description": "Allows users to submit Request for Quotations with zero quantity. Useful when rates are fixed but the quantities are not. Eg. Rate Contracts.",
    "fieldname": "allow_zero_qty_in_request_for_quotation",
    "fieldtype": "Check",
-   "label": "Allow Zero Quantity Items in Request for Quotation"
+   "label": "Allow Request for Quotation with Zero Quantity"
   },
   {
    "default": "0",
-   "description": "Allows items in the Supplier Quotation to have a quantity of 0. Useful when the rate/unit price is agreed upon, but the quantity is not yet determined.",
+   "description": "Allows users to submit Supplier Quotations with zero quantity. Useful when rates are fixed but the quantities are not. Eg. Rate Contracts.",
    "fieldname": "allow_zero_qty_in_supplier_quotation",
    "fieldtype": "Check",
-   "label": "Allow Zero Quantity Items in Supplier Quotation"
+   "label": "Allow Supplier Quotation with Zero Quantity"
   }
  ],
  "grid_page_length": 50,
@@ -239,7 +239,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-05-06 12:32:00.195378",
+ "modified": "2025-05-06 15:21:49.639642",
  "modified_by": "Administrator",
  "module": "Buying",
  "name": "Buying Settings",
