--- a/erpnext/accounts/doctype/accounts_settings/accounts_settings.json
+++ b/erpnext/accounts/doctype/accounts_settings/accounts_settings.json
@@ -65,7 +65,7 @@
   "pos_setting_section",
   "post_change_gl_entries",
   "column_break_xrnd",
-  "use_sales_invoice_in_pos",
+  "invoice_doctype_in_pos",
   "assets_tab",
   "asset_settings_section",
   "calculate_depr_using_total_days",
@@ -551,13 +551,6 @@
    "fieldtype": "Column Break"
   },
   {
-   "default": "0",
-   "description": "If enabled, Sales Invoice will be generated instead of POS Invoice in POS Transactions for real-time update of G/L and Stock Ledger.",
-   "fieldname": "use_sales_invoice_in_pos",
-   "fieldtype": "Check",
-   "label": "Use Sales Invoice"
-  },
-  {
    "default": "Buffered Cursor",
    "fieldname": "receivable_payable_fetch_method",
    "fieldtype": "Select",
@@ -622,6 +615,14 @@
   {
    "fieldname": "column_break_feyo",
    "fieldtype": "Column Break"
+  },
+  {
+   "default": "Sales Invoice",
+   "description": "For high-volume transactions, it is advisable to use POS Invoice.",
+   "fieldname": "invoice_doctype_in_pos",
+   "fieldtype": "Select",
+   "label": "Invoice DocType",
+   "options": "Sales Invoice\nPOS Invoice"
   }
  ],
  "grid_page_length": 50,
