feat(bank-statement-import): add support for uploading MT940 format bank statements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
 
     # Not used directly - required by PyQRCode for PNG generation
     "pypng~=0.20220715.0",
+
+    # MT940 parser for bank statements
+    "mt-940>=4.26.0"
 ]
 
 [build-system]
