--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -10,6 +10,9 @@ on:
       - '**.csv'
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 concurrency:
   group: patch-develop-${{ github.event_name }}-${{ github.event.number || github.event_name == 'workflow_dispatch' && github.run_id || '' }}
   cancel-in-progress: true
