--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "holidays~=0.75",
 
     # integration dependencies
-    "googlemaps",
+    "googlemaps~=4.10.0",
     "plaid-python~=7.2.1",
     "python-youtube~=0.8.0",
 
